--- a/lab04/src/views/products/edit.ejs
+++ b/lab04/src/views/products/edit.ejs
@@ -93,7 +93,7 @@
 <body>
   <div class="container">
     <h1>Chỉnh sửa sản phẩm</h1>
-    <form action="/edit/<%= product.id %>" method="post" enctype="multipart/form-data">
+    <form action="/products/edit/<%= product.id %>" method="post" enctype="multipart/form-data">
       <input type="hidden" name="oldImage" value="<%= product.url_image %>">
       <div class="form-group">
         <label for="name">Tên sản phẩm:</label>
